# ideas

./: Cargo.toml  README.md
src/: error.rs  interaction.rs  item.rs  main.rs  parser.rs  status.rs  store.rs
src/interaction/: icore.rs  ieditor.rs  iview.rs
src/parser/: markdown.rs
