[package]
name = "ideas"
version = "0.1.0"
authors = ["wangyi <wangyi@megvii.com>"]
edition = "2018"
description = "A cli tool to record your ideas"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal", "productivity"]
license = "MIT"

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "^0.17.7"
defer = "*"
failure = "*"
sled = "0.34.6"
home = "0.5"
termimad = "0.9"
minimad = "0.6.9"

[profile.release]
lto = true
