[package]
name = "ideas"
version = "0.2.0"
authors = ["wangyi <wangyi@megvii.com>"]
edition = "2018"
description = "A cli tool to record your ideas"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal", "productivity"]
license = "MIT"

exlude = [
    "assets/*",
]

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.19"
defer = "0.1.0"
failure = "0.1.8"
sled = "0.34.6"
home = "0.5"
termimad = "0.10.0"
minimad = "0.7.0"
tempfile = "3.0.7"

[profile.release]
lto = true
